fix ,some page is too short

--- a/nut/static/css/web/dimentions/xs.css
+++ b/nut/static/css/web/dimentions/xs.css
@@ -323,6 +323,12 @@
   width: 0;
   z-index: 1;
 }
+.change_password,
+.binding_page,
+.edit_profile,
+.main_static {
+  min-height: 570px;
+}
 @media (max-width: 767px) {
   .event-item {
     padding: 5px 5px 5px 5px;
