--- a/nut/static/css/web/site.css
+++ b/nut/static/css/web/site.css
@@ -323,6 +323,12 @@
   width: 0;
   z-index: 1;
 }
+.change_password,
+.binding_page,
+.edit_profile,
+.main_static {
+  min-height: 570px;
+}
 /* 商品详情页喜爱头像列表 */
 .like-user-list > div {
   padding: 0px;
